hooked up glucose and fixed cryptominisat bug

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -102,6 +102,8 @@ libcvc4_la_SOURCES = \
 	prop/sat_solver_factory.cpp \
 	prop/cryptominisat.h \
 	prop/cryptominisat.cpp \
+	prop/glucose.h \
+	prop/glucose.cpp \
 	smt/smt_engine.cpp \
 	smt/smt_engine_check_proof.cpp \
 	smt/smt_engine.h \
