updated namespace and removed crypto

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -100,10 +100,8 @@ libcvc4_la_SOURCES = \
 	prop/sat_solver_types.h \
 	prop/sat_solver_factory.h \
 	prop/sat_solver_factory.cpp \
-	prop/cryptominisat.h \
-	prop/cryptominisat.cpp \
-	prop/glucose.h \
-	prop/glucose.cpp \
+	prop/riss.h \
+	prop/riss.cpp \
 	smt/smt_engine.cpp \
 	smt/smt_engine_check_proof.cpp \
 	smt/smt_engine.h \
