added glucose option

--- a/configure.ac
+++ b/configure.ac
@@ -113,7 +113,7 @@ AC_ARG_WITH([build],
 if test -z "${with_build+set}"; then
   with_build=production
 fi
-if test -z "${enable_optimized+set}" -a -z "${enable_debug_symbols+set}" -a -z "${enable_assertions+set}" -a -z "${enable_tracing+set}" -a -z "${enable_dumping+set}" -a -z "${enable_muzzle+set}" -a -z "${enable_coverage+set}" -a -z "${enable_profiling+set}" -a -z "${enable_statistics+set}" -a -z "${enable_replay+set}" -a -z "${with_gmp+set}" -a -z "${with_cln+set}" -a -z "${with_glpk+set}" -a -z "${with_abc+set}" -a -z "${with_cryptominisat+set}"; then
+if test -z "${enable_optimized+set}" -a -z "${enable_debug_symbols+set}" -a -z "${enable_assertions+set}" -a -z "${enable_tracing+set}" -a -z "${enable_dumping+set}" -a -z "${enable_muzzle+set}" -a -z "${enable_coverage+set}" -a -z "${enable_profiling+set}" -a -z "${enable_statistics+set}" -a -z "${enable_replay+set}" -a -z "${with_gmp+set}" -a -z "${with_cln+set}" -a -z "${with_glpk+set}" -a -z "${with_abc+set}" -a -z "${with_cryptominisat+set}" -a -z "${with_glucose+set}" -a -z "${with_riss+set}"; then
   custom_build_profile=no
 else
   custom_build_profile=yes
@@ -222,6 +222,17 @@ if test -n "${with_cryptominisat+set}"; then
     btargs="$btargs cryptominisat"
   fi
 fi
+if test -n "${with_glucose+set}"; then
+  if test "$with_glucose" = yes; then
+    btargs="$btargs glucose"
+  fi
+fi
+if test -n "${with_riss+set}"; then
+  if test "$with_riss" = yes; then
+    btargs="$btargs riss"
+  fi
+fi
+
 AC_MSG_RESULT([$with_build])
 
 AM_INIT_AUTOMAKE([1.11 no-define tar-pax parallel-tests color-tests subdir-objects])
@@ -807,7 +818,6 @@ elif test -n "$with_cryptominisat"; then
     [AC_LANG_PROGRAM([#include <cryptominisat4/cryptominisat.h>],
       [CMSat::SATSolver test()])],
     [LIBS="$LIBS -lcryptominisat4"] [have_libcryptominisat=1],
-    # [AC_MSG_ERROR([compiled damn thing.])],
     [AC_MSG_ERROR([libcryptominisat is not installed.])])
   LDFLAGS=$SAVED_LDFLAGS
 else
@@ -818,8 +828,31 @@ if test $have_libcryptominisat -eq 1; then
   CVC4CPPFLAGS="${CVC4CPPFLAGS:+$CVC4CPPFLAGS }-DCVC4_USE_CRYPTOMINISAT"
 fi
 AM_CONDITIONAL([CVC4_USE_CRYPTOMINISAT], [test $have_libcryptominisat -eq 1])
-# AC_SUBST([CRYPTOMINISAT_LDFLAGS])
-# AC_SUBST([CRYPTOMINISAT_LIBS])
+
+# Build with libglucose
+AC_ARG_WITH([glucose],
+  [AS_HELP_STRING([--with-glucose],
+     [use the GLUCOSE sat solver])], [], [with_glucose=])
+have_libglucose=0
+if test "$with_glucose" = no; then
+  AC_MSG_RESULT([no, glucose disabled by user])
+elif test -n "$with_glucose"; then
+  AC_MSG_RESULT([yes, glucose requested by user])
+  AC_LANG(C++)
+  LIBS="$LIBS -lglucose"
+  AC_LINK_IFELSE(
+    [AC_LANG_PROGRAM([#include <simp/SimpSolver.h>],
+      [Glucose::SimpSolver test()])],
+    [have_libglucose=1],
+    [AC_MSG_ERROR([libglucose is not installed.])])
+else
+  AC_MSG_RESULT([no, user didn't request glucose])
+  with_glucose=no
+fi
+if test $have_libglucose -eq 1; then
+  CVC4CPPFLAGS="${CVC4CPPFLAGS:+$CVC4CPPFLAGS }-DCVC4_USE_GLUCOSE"
+fi
+AM_CONDITIONAL([CVC4_USE_GLUCOSE], [test $have_libglucose -eq 1])
 
 
 # Check to see if this version/architecture of GNU C++ explicitly
